manifests/environments/prod/apps/graphql/ingress-hostname.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: graphql
spec:
  hostnames:
    - dialogporten.prod.dis-core.altinn.cloud
